--- a/index.html
+++ b/index.html
@@ -12,51 +12,76 @@
 <!-- NOTE the body tag should contain all of the code you want to render inside of the webpage(viewport) -->
 
 <body>
-  <b>🐾 Pet.Care</b>
+  <header>
+    <b>🐾 Pet.Care</b>
+    <nav>
+      <span>Home</span>
+      <span>About</span>
+      <span>Services</span>
+      <span>Products</span>
+      <span>Trainers</span>
+    </nav>
+    <span>Sign Up</span>
+  </header>
 
-  <!-- NOTE h1 is the largest heading element -->
-  <h1>At Pet Care We Care</h1>
+  <main>
 
-  <!-- NOTE p is for paragraph -->
-  <p>
-    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo reprehenderit atque qui voluptate dolores laboriosam
-    odit reiciendis aspernatur quae, perspiciatis minus laudantium, excepturi similique expedita accusamus vel rem
-    inventore et!
-  </p>
-  <button>
-    Our Services
-  </button>
-  <button>
-    📞 Get in touch
-  </button>
-  <img src="images/pets.png" alt="A picture of doctor dog with some patient animals floating around">
-  <h2>Pups 🐶</h2>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, expedita.</p>
-  <h2>Kittens 😺</h2>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, expedita.</p>
-  <h2>Rats 🐀</h2>
-  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, expedita.</p>
+    <article>
+      <!-- NOTE h1 is the largest heading element -->
+      <h1>At Pet Care We Care</h1>
+
+      <!-- NOTE p is for paragraph -->
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo reprehenderit atque qui voluptate dolores
+        laboriosam
+        odit reiciendis aspernatur quae, perspiciatis minus laudantium, excepturi similique expedita accusamus vel rem
+        inventore et!
+      </p>
+      <button>
+        Our Services
+      </button>
+      <button>
+        📞 Get in touch
+      </button>
+    </article>
+
+    <aside>
+      <img src="images/pets.png" alt="A picture of doctor dog with some patient animals floating around">
+    </aside>
+  </main>
+
+  <footer>
+    <h2>Pups 🐶</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, expedita.</p>
+    <h2>Kittens 😺</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, expedita.</p>
+    <h2>Rats 🐀</h2>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur, expedita.</p>
+  </footer>
 
 
 
 
-  <!-- NOTE divs are block elements -->
+
   <div>
-    jeremy is the guy
+    <!-- NOTE divs are block elements -->
+    <div>
+      jeremy is the guy
+    </div>
+    <div>
+      he is so cool
+    </div>
+    <div>
+      🤠
+    </div>
+    <!-- NOTE spans are inline elements -->
+    <span>
+      I'm a span
+    </span>
+    <span>
+      Spans are cool
+    </span>
   </div>
-  <div>
-    he is so cool
-  </div>
-  <div>
-    🤠
-  </div>
-  <!-- NOTE spans are inline elements -->
-  <span>
-    I'm a span
-  </span>
-  <span>
-    Spans are cool
-  </span>
 </body>
 
 </html>
