--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
   <!-- NOTE header is a parent -->
   <header class="display-flex justify-content-space-between">
     <!-- NOTE b is a child of header -->
-    <b>🐾 Pet.Care</b>
+    <b class="text-shadow">🐾 Pet.Care</b>
     <!-- NOTE nav is a sibling of b -->
-    <nav>
+    <nav class="display-flex">
       <!-- NOTE this works but it's bad -->
       <!-- <span style="color: purple;">Home</span> -->
       <span class="text-purple">Home</span>
@@ -65,10 +65,10 @@
         odit reiciendis aspernatur quae, perspiciatis minus laudantium, excepturi similique expedita accusamus vel rem
         inventore et!
       </p>
-      <button>
+      <button class="purple-button">
         Our Services
       </button>
-      <button>
+      <button class="text-shadow">
         📞 Get in touch
       </button>
     </article>
